force-app/main/default/objects/Table_Export_Log__c/Table_Export_Log__c.object-meta.xml
<CustomObject>
    <label>Table Export Log</label>
    <nameField>
        <displayFormat>TEL-{00000}</displayFormat>
        <label>Export Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Table Export Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>