force-app/main/default/objects/Table_Export_Log__c/fields/Completed_Time__c.field-meta.xml
<CustomField>
    <fullName>Completed_Time__c</fullName>
    <label>Completed Time</label>
    <type>DateTime</type>
</CustomField>