force-app/main/default/objects/Table_Export_Log__c/fields/Matrix_Downgraded__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Downgraded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matrix Downgraded</label>
    <type>Checkbox</type>
</CustomField>