force-app/main/default/objects/Table_Export_Log__c/fields/Output_Format__c.field-meta.xml
<CustomField>
    <fullName>Output_Format__c</fullName>
    <label>Output Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSV</fullName>
                <default>true</default>
                <label>CSV</label>
            </value>
            <value>
                <fullName>XLSX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>