force-app/main/default/objects/Table_Export_Log__c/fields/Started_Time__c.field-meta.xml
<CustomField>
    <fullName>Started_Time__c</fullName>
    <label>Started Time</label>
    <type>DateTime</type>
</CustomField>